# event-modeling-workshop-nov-2020

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
curl/: MakeReservation.json  test_api.sh
migrations/: 20221114171845_init.sql  20221115144837_reservation_query.sql
src/: config.rs  main.rs  metadata_extractor.rs  queries.rs  route_handler.rs  state.rs
src/domain/: aggregate.rs  commands.rs  events.rs
