[package]
name = "event-modeling-workshop-nov-2020"
version = "0.1.1"
authors = ["John Bledsoe"]
edition = "2024"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "sqlite"]
description = "Event Modeling workshop using axum, cqrs-es, and sqlite-es"
repository = "https://github.com/johnbcodes/event-modeling-workshop-nov-2020"
readme = "README.md"
publish = false

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8"
cqrs-es = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite-es = "0.4"
sqlx = { version = "0.8", features = ["json", "runtime-tokio-rustls", "sqlite"] }
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
